third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-msrv/transmute-ref-dst-mutable.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
